--- a/asu.dproj
+++ b/asu.dproj
@@ -144,6 +144,10 @@
             <Form>newlkrod</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Unit9.pas">
+            <Form>Form9</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
