ИЗМЕНИЛ ЮНИТ9 И ЮНИТ10
ПОСМОТРИТЕ ТАМ УДАЛЕНИЕ НЕ КОРЕКТНО РАБОТАЕТ И РЕдАКТИРВОАНИЕ РАБОТАТЬ
ОТКАЗЫВАЕТСЯ.

--- a/Win32/Release/setting.ini
+++ b/Win32/Release/setting.ini
@@ -1,6 +1,6 @@
 [main]
 server=192.168.20.20
 dbname=asu
-dbuser=asu
-dbpass=asu
-db='Server=192.168.20.20;DriverID=MySQL;Database=asu;User_Name=asu;Password=asu;CharacterSet=cp1251'
+dbuser=root
+dbpass=1234567890
+db='Server=localhost;DriverID=MySQL;Database=asu;User_Name=root;Password=1234567890;CharacterSet=cp1251'
