Формы категорий родства, типа оценок, должностей студентов
Делите сами и поехали

--- a/asu.dproj
+++ b/asu.dproj
@@ -152,6 +152,18 @@
             <Form>Redak</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Unit11.pas">
+            <Form>Form11</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="Unit12.pas">
+            <Form>Form13</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="Unit14.pas">
+            <Form>Form14</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
