--- a/Win32/Release/setting.ini
+++ b/Win32/Release/setting.ini
@@ -3,4 +3,4 @@ server=192.168.20.20
 dbname=asu
 dbuser=root
 dbpass=0000
-db='Server=localhost;DriverID=MySQL;Database=asu;User_Name=root;Password=0000;CharacterSet=cp1251'
+db='Server=localhost;DriverID=MySQL;Database=asu;User_Name=root;Password=1234567890;CharacterSet=cp1251'
