--- a/asu.dproj
+++ b/asu.dproj
@@ -164,6 +164,10 @@
             <Form>dolgnost</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Unit13.pas">
+            <Form>group</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
