--- a/asu.dproj
+++ b/asu.dproj
@@ -176,6 +176,10 @@
             <Form>fam_card</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Unit17.pas">
+            <Form>red_ks</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
