--- a/asu.dproj
+++ b/asu.dproj
@@ -180,6 +180,10 @@
             <Form>red_ks</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Unit18.pas">
+            <Form>Redak_2</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
