--- a/asu.dproj
+++ b/asu.dproj
@@ -188,6 +188,10 @@
             <Form>Ocenivanie</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Unit20.pas">
+            <Form>Propuski</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
